--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,13 +1,4 @@
 
-/*
-body {
-  margin: 0;
-  color: #244751;
-  background-color: #cce6ff;
-  font-family: 'Roboto Condensed', sans-serif;
-}
-*/
-
 nav {
   position: fixed;
   left: 0;
@@ -18,9 +9,8 @@ nav {
   background-color: #00a087;
   color: #e8fdff;
   line-height: 2.2;
-  text-align: center-vertical;
+  z-index: 1;
 }
-
 
 #nav-bar .logo {
   width: 80px;
