--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,7 +19,7 @@ html {
 body {
   margin: 0;
   color: #244751;
-  background-color: #cce6ff;
+  background-color: #e6f7ff;
   font-family: 'Roboto Condensed', sans-serif;
 }
 
